--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="images/svg" href="images/icon.svg">
     <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="Css/responsiv.css">
     <link rel="stylesheet" href="Css/animation.css">
     <title>MontBlanc</title>
 </head>
+
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="images/logo.svg" alt="Logo of the company writed 'MONTBLANC' in upper case"></svg></div>
+            <div class="logo"><img src="images/logo.svg"
+                    alt="Logo of the company writed 'MONTBLANC' in upper case"></svg></div>
             <ul class="nav">
                 <li class="categories">Bikes</li>
                 <li class="categories">Accessories</li>
@@ -22,33 +26,83 @@
     </header>
     <main>
         <div class="gold-square"><img class="gold-img" src="images/gold.png" alt="gold rectangle with a waves form"></div>
-        <section class="moto-presentation">
-            <div class="presentation">
-                <!-- <div class="gold-text"><img class="gold-text" src="images/text.svg" alt="asian text style with a gold gradient"></div> -->
-                <div class="left">
-                    <div class="moto-circle">
-                        <div class="moto"><img class="moto-img" src="images/moto_png.png" alt="futurist/technlogic electrical black style bike"></img></div>
-                        <div class="circle-montblanc"><img src="images/circle_text.svg" alt="circle of character. writed 'MOTORCYCLE MONTBLANC'"></div>
-                    </div>
-                    <div class="bottom-left">
-                        <div class="cursor">
-                            <div class="page-state">&lt;</div>
-                            <div class="page-state">2</div>
-                            <div class="cursor-line">
-                                <img src="images/bar-progress.svg" alt="progress bar">
-                            </div>
-                            <div class="page-state">10</div>
-                            <div class="page-state">&gt;</div>
+        <section class="present">
+            <div class="moto-presentation">
+                <div class="outer-goldtxt">
+                        <img class="gold-text-img" src="images/text.svg" alt="asian text style with a gold gradient">
+                </div>
+                <div class="presentation">
+                    <div class="left">
+                        <div class="moto-circle">
+                            <div class="moto"><img class="moto-img" src="images/moto_png.png"
+                                    alt="futurist/technlogic electrical black style bike"></img></div>
+                            <div class="circle-montblanc"><img class="circle-montblanc-img" src="images/circle_text.svg"
+                                    alt="circle of character. writed 'MOTORCYCLE MONTBLANC'"></div>
                         </div>
-                        <div class="description"><p class="description-txt">The bike comes in all black, with a relatively modern appeal. Chrome accents in just the right places make the bike stand out, while the black-on-black satin text on the bike's fork-guards helps highlight the company's branding without being too direct or obvious.</p></div>
+                        <div class="bottom-left">
+                            <div class="cursor">
+                                <div class="page-state">&lt;</div>
+                                <div class="page-state">2</div>
+                                <div class="cursor-line">
+                                    <img src="images/bar-progress.svg" alt="progress bar">
+                                </div>
+                                <div class="page-state">10</div>
+                                <div class="page-state">&gt;</div>
+                            </div>
+                            <div class="description">
+                                <p class="description-txt">The bike comes in all black, with a relatively modern appeal.
+                                    Chrome accents in just the right places make the bike stand out, while the
+                                    black-on-black satin text on the bike's fork-guards helps highlight the company's
+                                    branding without being too direct or obvious.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="wheel-moto"><img class="wheel-img" src="images/roue_moto.png"
+                                alt="wheel of a futurist/technlogic electrical black style bike"></div>
+                        <div class="back-moto"><img class="back-moto-img" src="images/back_moto.png"
+                                alt="back of a futurist/technlogic electrical black style bike"></div>
                     </div>
                 </div>
-                <div class="right">
-                    <div class="wheel-moto"><img class="wheel-img" src="images/roue_moto.png" alt="wheel of a futurist/technlogic electrical black style bike"></div>
-                    <div class="back-moto"><img class="back-moto-img" src="images/back_moto.png" alt="back of a futurist/technlogic electrical black style bike"></div>
+            </div>
+            <div class="performances">
+                <div class="performance-block">
+                    <div class="spec-block">
+                        <div class="text-spec">TOP SPEED</div>
+                        <div class="spec">
+                            <div class="spec-txt-small">6-SPEED CONSTANT-MESH</div>
+                            <div class="spec-txt">169 MPH</div>
+                            <div class="spec-txt-small">272 KM/H</div>
+                        </div>
+                    </div>
+                    <div class="spec-block">
+                        <div class="text-spec">POWER</div>
+                        <div class="spec">
+                            <div class="spec-txt-small">121 KW</div>
+                            <div class="spec-txt">162 HP</div>
+                            <div class="spec-txt-small">9.250 RPM</div>
+                        </div>
+                    </div>
+                    <div class="spec-block">
+                        <div class="text-spec">TORQUE</div>
+                        <div class="spec">
+                            <div class="spec-txt-small">8,800 RPM</div>
+                            <div class="spec-txt">130.5 N M</div>
+                            <div class="spec-txt-small">96.3 LBF⋅FT</div>
+                        </div>
+                    </div>
+                    <div class="spec-block">
+                        <div class="text-spec">FUEL CAPACITY</div>
+                        <div class="spec">
+                            <div class="spec-txt-small">4.5 US GAL</div>
+                            <div class="spec-txt">17 L</div>
+                            <div class="spec-txt-small">3.7 IMP GAL</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
 </body>
+
 </html>
